fix(playground): keep white bg when switching to dark mode

--- a/client/src/lit/play/runner.scss
+++ b/client/src/lit/play/runner.scss
@@ -1,4 +1,5 @@
 iframe {
+  background: #fff;
   border: none;
   height: 100%;
   width: 100%;
